apps/production/new-new-boplats/database/admin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-new-boplats-mongo-express
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: new-new-boplats-mongo-express
  template:
    metadata:
      labels:
        app: new-new-boplats-mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express:1.0.2-20-alpine3.19
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
            requests:
              memory: "128Mi"
              cpu: "100m"
