apps/production/new-new-boplats/database/admin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: new-new-boplats-mongo-express
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`new-new-boplats-admin.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: new-new-boplats-mongo-express
          port: http
  tls:
    secretName: local-hejsan-xyz-tls
